--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev":"nodemon server.js",
-    "build":"npm i"
-
+    "dev": "nodemon server.js",
+    "build": "npm i"
   },
   "keywords": [],
   "author": "",
@@ -23,5 +22,8 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.22"
+  },
+  "devDependencies": {
+    "dotenv": "^16.0.3"
   }
 }
